# fostride_smartbin_ml

./: .env  .gitignore  README.md  cameratoservo.py  gavitest.py  production_guide.md  requirements.txt  test,py
smart_bin_aryan/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test.py
smart_bin_aryan/data/: step0_load_dataset.md
smart_bin_aryan/data/raw/: .gitkeep
smart_bin_aryan/docs/: mkdocs.yml
smart_bin_aryan/docs/docs/: index.md
smart_bin_aryan/models/aryan/: m1_baseline.py
smart_bin_aryan/smart_bin/: __init__.py  dataset.py  features.py  plots.py
smart_bin_aryan/smart_bin/modeling/: predict.py  train.py
smart_bin_aryan/src/data/: coco_dataset.py  download_raw.py
smart_bin_aryan/src/models/: mask_rcnn.py
smart_bin_aryan/src/training/: engine.py
